--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,10 @@
-bucket: benchmarking-hao
+buckets: 
+  - hao-us-east-1
+  - hao-ap-southeast-2
 regions:
   - us-east-1
   - ap-southeast-2
-  - ap-northeast-1
-  - eu-west-2
-  - sa-east-1
-  - ca-central-1
-  - us-west-1
 file_size_kb:
   - 1
-  - 512
-  - 1024
+  - 5
+num_clients: 3
