--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,21 @@
 buckets: 
   - hao-us-east-1
   - hao-ap-southeast-2
+  - hao-ap-northeast-1
+  - hao-eu-west-2
+  - hao-sa-east-1
+  - hao-ca-central-1
+  - hao-us-west-1
 regions:
   - us-east-1
   - ap-southeast-2
+  - ap-northeast-1
+  - eu-west-2
+  - sa-east-1
+  - ca-central-1
+  - us-west-1
 file_size_kb:
   - 1
   - 5
-num_clients: 3
+  - 10
+num_clients: 5
