--- a/parbenchmarker/config.yaml
+++ b/parbenchmarker/config.yaml
@@ -14,11 +14,16 @@ regions:
   - sa-east-1
   - ca-central-1
   - us-west-1
-file_size_kb:
-  - 1024
+file_size_kb: 1024
 node_ips:
   - 127.0.0.1
   - 127.0.0.2
 req_times:
-  - 16:00:00
-  - 17:00:00
+  - "16:24:00"
+  - "16:24:10"
+  - "16:24:20"
+  - "16:24:30"
+  - "16:24:40"
+  - "16:24:50"
+  - "16:24:00"
+
