separated provisioning phase from benchmarking phase

--- a/parbenchmarker/config.yaml
+++ b/parbenchmarker/config.yaml
@@ -14,13 +14,14 @@ regions:
   - sa-east-1
   - ca-central-1
   - us-west-1
-file_size_kb: 128
+file_size_kb: 64
+username: hl7gr
 req_times:
-  - "17:55:00"
-  - "17:55:10"
-  - "17:55:20"
-  - "17:55:30"
-  - "17:55:40"
-  - "17:55:50"
-  - "17:55:00"
+  - "11:55:00"
+  - "11:55:20"
+  - "11:55:40"
+  - "11:56:00"
+  - "11:56:20"
+  - "11:56:40"
+  - "11:56:00"
 
