--- a/parbenchmarker/config.yaml
+++ b/parbenchmarker/config.yaml
@@ -16,12 +16,7 @@ regions:
   - us-west-1
 file_size_kb: 64
 username: hl7gr
-req_times:
-  - "12:05:00"
-  - "12:05:20"
-  - "12:05:40"
-  - "12:06:00"
-  - "12:06:20"
-  - "12:06:40"
-  - "12:06:00"
+start_time: "11:10:00"
+gap_sec: 20
+
 
