--- a/parbenchmarker/config.yaml
+++ b/parbenchmarker/config.yaml
@@ -14,14 +14,16 @@ regions:
   - sa-east-1
   - ca-central-1
   - us-west-1
-file_size_kb: 131072
+file_size_kb: 1
 username: hl7gr
 
 multi_local_clients: True 
 num_local_clients: 5
 
-start_time: "14:58:00"
-gap_sec: 180
+start_time: "01:12:00"
+gap_sec: 10
+
+between_req_sec: 0.2
 
 
 
